[metadata]
name = django-mpesa
version = 1.3.4
description = A python library that interfaces safaricoms mpesa apis
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://www.vorane.com/
author = Paul Ekirapa
author_email = ekirapapaul@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[options]
include_package_data = true
packages = find: